k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dco-cms
  labels:
    app.kubernetes.io/name: dco-cms
    classification: unclassified
