k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dco-backend-svc
  namespace: dco-cms
spec:
  selector:
    app: dco-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
