k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dco-frontend-svc
  namespace: dco-cms
spec:
  selector:
    app: dco-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
